Fixing package name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "marshover"
+name = "mars-rover"
 version = "0.1.0"
 description = ""
 authors = ["Bruno Artur <batlopes@yahoo.com.br>"]
