--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pytest = "^7.1.2"
 pytest-bdd = "^5.0.0"
 behave = "^1.2.6"
 flake8 = "^4.0.1"
+black = "^22.3.0"
 
 [tool.poetry.dev-dependencies]
 
