--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
 attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 behave==1.2.6; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0"
+black==22.3.0; python_full_version >= "3.6.2"
+click==8.1.3; python_version >= "3.7" and python_full_version >= "3.6.2"
+colorama==0.4.4; sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.6.2" and platform_system == "Windows"
 flake8==4.0.1; python_version >= "3.6"
 glob2==0.7; python_version >= "3.6"
 iniconfig==1.1.1; python_version >= "3.7"
 mako==1.2.0; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7"
 mccabe==0.6.1; python_version >= "3.6"
+mypy-extensions==0.4.3; python_full_version >= "3.6.2"
 packaging==21.3; python_version >= "3.7"
 parse-type==0.6.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 parse==1.19.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+pathspec==0.9.0; python_full_version >= "3.6.2"
+platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2"
 pluggy==1.0.0; python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -19,4 +24,4 @@ pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
 pytest-bdd==5.0.0; python_version >= "3.6"
 pytest==7.1.2; python_version >= "3.7"
 six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
-tomli==2.0.1; python_version >= "3.7"
+tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.6.2" and python_version >= "3.7"
